# metorex

./: .gitignore  BYTECODE.md  CASE_EXPR.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  README.md  REFACTOR.md  REQUIRE.md  ROADMAP.md
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: test_runner.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/tests/: error_test.rs  version_test.rs
examples/advanced/: concurrency.mx  dsl_example.mx  dynamic_method_definition.mx  exception_handling.mx  pattern_matching.mx  serialization.mx  traits.mx  type_annotations.mx
examples/algorithms/: average_temperature.mx  character_counter.mx  fib_sequence.mx  (+6 more)
runtime/: Cargo.toml
scripts/: line_counts.sh  misplaced_tests.sh
src/: banner.txt  builtin_classes.rs  callable.rs  class.rs  environment.rs  error.rs  file_loader.rs  lib.rs  main.rs  object.rs  repl.rs  resolver.rs  runtime.rs  scope.rs  vm.rs
tests/: all_tests.rs  ast_method_call_test.rs  ast_test.rs  attr_methods.rs  block_as_object_tests.rs  block_execution_tests.rs  class_instantiation_tests.rs  common.rs  control_flow_execution_tests.rs  control_flow_tests.rs  error_reporting_tests.rs  error_test.rs  example_runner.rs  examples_runner.rs  exception_execution_tests.rs  exception_parsing_tests.rs  function_definition_tests.rs  inheritance_tests.rs  lexer_test.rs  method_dispatch_tests.rs  object_tests.rs  parser_error_recovery_tests.rs  parser_tests.rs  pattern_matching_tests.rs  test_runner.rs  type_system_tests.rs  variable_resolution_tests.rs  version_test.rs  vm_initialization_tests.rs  vm_statement_tests.rs
(+285 files in other folders)
