[workspace]
members = ["core", "runtime", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
inkwell = { version = "0.5.0-beta.3", features = ["llvm18-0"] }
logos = "0.14.0"
libc = "0.2"
clap = { version = "4.5", features = ["derive", "cargo"] }
thiserror = "2.0"
